--- a/Square.vm
+++ b/Square.vm
@@ -3,6 +3,6 @@ push argument 0
 push argument 0
 
 // Multiply x * x
-call Math.multiply 2  // Using the built-in multiplication function
+call Math.multiply 2
 
-// The result remains on the stack as required
+// The result remains at the bottom of the stack
